; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/solaris/local/extr_197.c_usage.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/solaris/local/extr_197.c_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"Usage:\0A\00", align 1
@.str.1 = private unnamed_addr constant [29 x i8] c"    %s [command] [options]\0A\0A\00", align 1
@.str.2 = private unnamed_addr constant [11 x i8] c"Commands:\0A\00", align 1
@.str.3 = private unnamed_addr constant [42 x i8] c"  dump                   Dumps the stack\0A\00", align 1
@.str.4 = private unnamed_addr constant [49 x i8] c"  shell                  Dumps the shell buffer\0A\00", align 1
@.str.5 = private unnamed_addr constant [51 x i8] c"  exploit                Exploits /usr/bin/eject\0A\0A\00", align 1
@.str.6 = private unnamed_addr constant [10 x i8] c"Options:\0A\00", align 1
@.str.7 = private unnamed_addr constant [65 x i8] c"  --num=96               Number of words to dump from the stack\0A\00", align 1
@.str.8 = private unnamed_addr constant [60 x i8] c"  --align=2              Sets the alignment (0, 1, 2 or 3)\0A\00", align 1
@.str.9 = private unnamed_addr constant [53 x i8] c"  --shellofs=-6          Offset of the shell buffer\0A\00", align 1
@.str.10 = private unnamed_addr constant [69 x i8] c"  --retlocofs=-4         Retloc adjustment (must be divisible by 4)\0A\00", align 1
@.str.11 = private unnamed_addr constant [57 x i8] c"  --retloc=0xeffffa3c    Location of the return address\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usage(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %4 = load i8*, i8** %2, align 8
  %5 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.1, i64 0, i64 0), i8* %4)
  %6 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0))
  %7 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.3, i64 0, i64 0))
  %8 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.4, i64 0, i64 0))
  %9 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.5, i64 0, i64 0))
  %10 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.6, i64 0, i64 0))
  %11 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([65 x i8], [65 x i8]* @.str.7, i64 0, i64 0))
  %12 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([60 x i8], [60 x i8]* @.str.8, i64 0, i64 0))
  %13 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str.9, i64 0, i64 0))
  %14 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([69 x i8], [69 x i8]* @.str.10, i64 0, i64 0))
  %15 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([57 x i8], [57 x i8]* @.str.11, i64 0, i64 0))
  %16 = call i32 @exit(i32 0) #3
  unreachable
}

declare dso_local i32 @printf(i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
